# amygdala

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  core_adapter.py  emotion.py  pyproject.toml  relation.py  rerank.py  router.py  stm.py  store.py  worker.py
.github/workflows/: ci.yml
amygdala/: __init__.py  _ulid.py  attach.py  core_adapter.py  emotion.py  interaction.py  mood.py  relation.py  rerank.py  router.py  stm.py  store.py  worker.py
benchmarks/: eval_hersona_integration.py  eval_rerank.py  results.json
benchmarks/results_hersona_integration/: 2026-07-17-005310-haiku-persona_override_attack_ja.json  2026-07-17-163652-haiku-persona_override_attack_ja.json  2026-07-17-163800-haiku-persona_override_attack_ja.json  2026-07-17-164211-haiku-persona_override_attack_ja.json  2026-07-17-164327-haiku-persona_override_attack_ja.json  2026-07-17-164613-haiku-persona_jailbreak_ja.json  2026-07-17-164718-haiku-persona_jailbreak_ja.json  2026-07-17-165027-haiku-persona_jailbreak_ja.json  2026-07-17-165119-haiku-persona_jailbreak_ja.json  2026-07-17-haiku-persona_override_attack_ja.json
docs/: INTEGRATION.md  PUBLIC_API.md  REQUIREMENTS.md
examples/: chat_loop.py  custom_backend.py  llm_classifier.py  rule_classifier.py  rule_milestone_detector.py
tests/: test_attach.py  test_contract_mnemosyne.py  test_emotion.py  test_examples.py  test_interaction.py  test_milestone_detector.py  test_mood.py  test_public_api.py  test_relation.py  test_rerank.py  test_router.py  test_stm.py  test_store.py  test_worker.py
