[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amygdala"
version = "1.4.0"
description = "Emotion & relationship memory layer on top of mnemosyne — 5-axis emotions, relationship progression, mood state, and prompt injection blocks for LLM characters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shiro-0x" }]
keywords = ["llm", "emotion", "memory", "agent", "character", "persona",
            "affective-computing", "mnemosyne", "hersona"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# 既定バックエンド = mnemosyne-memory(vec + FTS5 hybrid, temporal triples)。
# 対応範囲は 3.x 系(戻り値契約は tests/test_contract_mnemosyne.py で検証)。
# amygdala 本体はバックエンド非依存(Core Protocol の 3 メソッドのみに依存)。
# 別バックエンドを使う場合も現状はこの既定依存が入る(ハード依存の解除は
# 破壊的変更のためオーナー判断。examples/custom_backend.py 参照)。
dependencies = [
    "mnemosyne-memory>=3.12,<4",
]

[project.optional-dependencies]
# 既定バックエンドを明示指定したい場合のエイリアス(RealCore の ImportError が案内)
mnemosyne = ["mnemosyne-memory>=3.12,<4"]
# 上流の optional embeddings profile に整合させる(fastembed を直接固定しない)
embeddings = ["mnemosyne-memory[embeddings]>=3.12,<4"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["amygdala*"]
