[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amygdala"
version = "2.0.0"
description = "Backend-agnostic emotion & relationship memory layer for LLM characters — 5-axis emotions, relationship progression, mood state, and prompt injection blocks; pluggable memory backend (mnemosyne by default)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shiro-0x" }]
keywords = ["llm", "emotion", "memory", "agent", "character", "persona",
            "affective-computing", "mnemosyne", "hersona"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# amygdala 本体はバックエンド非依存(Core Protocol の 3 メソッドのみに依存)。
# 実行時のハード依存は無い(標準ライブラリのみ)。記憶基盤は用途に応じて
# extra で選ぶ(既定は mnemosyne。任意バックエンドは examples/custom_backend.py)。
dependencies = []

[project.optional-dependencies]
# 既定バックエンド = mnemosyne-memory(vec + FTS5 hybrid, temporal triples)。
# 対応 3.x 系。戻り値契約は tests/test_contract_mnemosyne.py で検証。
mnemosyne = ["mnemosyne-memory>=3.12,<4"]
# mnemosyne の optional embeddings profile(fastembed を直接固定しない)
embeddings = ["mnemosyne-memory[embeddings]>=3.12,<4"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["amygdala*"]
